--- a/telugu.html
+++ b/telugu.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-    <title>Biodata - Dr. Vismaya</title>
+    <title>Vyshanavi</title>
 </head>
 <body style="font-family: Arial, sans-serif; margin:0; padding:0; background-color:#b30000;">
 
@@ -12,37 +12,37 @@
         <div style="text-align:center;">
             <p style="margin:0; font-size:14px;">|| Shree Ganesh ||</p>
             <h2 style="margin:5px 0; font-family:'Georgia';">BIODATA</h2>
-            <img src="https://via.placeholder.com/150 " alt="Profile Photo" style="border-radius:50%; width:150px; height:150px;">
+            <img src="./VIC2871_3046279216_l.jpg" alt="Profile Photo" style="border-radius:50%; width:150px; height:150px;">
         </div>
 
         <hr>
 
         <!-- Personal Details -->
         <h3 style="color:#b30000; border-bottom:2px solid #b30000; padding-bottom:3px;">PERSONAL DETAILS</h3>
-        <p><strong>Name:</strong> Dr. Vismaya</p>
+        <p><strong>Name:</strong>Vyshnavi</p>
         <p><strong>Date of Birth:</strong> 5 January 1995</p>
-        <p><strong>Place of Birth:</strong> New Delhi</p>
-        <p><strong>Rashi:</strong> Tula (Libra)</p>
-        <p><strong>Nakshatra:</strong> Rohini</p>
+        <p><strong>Place of Birth:</strong>Hyderabad</p>
+        <p><strong>Rashi:</strong> Kanya (Virgo)</p>
+        <p><strong>Nakshatra:</strong> Hasta</p>
         <p><strong>Complexion:</strong> Very Fair</p>
         <p><strong>Height:</strong> 5 feet 5 inches</p>
         <p><strong>Education:</strong> 
             <ul>
-                <li>MBBS (AIMS)</li>
-                <li>MD (General Medicine)</li>
-                <li>DM (Neurology)</li>
+                <li>B.Tech (ECE)</li>
+                <li>M.Tech(ECE)</li>
+                <li>Ph.D (Semiconductors)</li>
             </ul>
         </p>
-        <p><strong>Occupation:</strong> Doctor (Neurologist)</p>
+        <p><strong>Occupation:</strong>SoC Verification Engineer</p>
 
         <hr>
 
         <!-- Family Details -->
         <h3 style="color:#b30000; border-bottom:2px solid #b30000; padding-bottom:3px;">FAMILY DETAILS</h3>
-        <p><strong>Father Name:</strong> Dr. Prakash</p>
-        <p><strong>Father's Occupation:</strong> General Surgeon, Working in BTM Hospital</p>
-        <p><strong>Mother Name:</strong> Dr. Priyadarshini</p>
-        <p><strong>Mother's Occupation:</strong> Gynecologist, Working in Asian Hospital</p>
+        <p><strong>Father Name:</strong>Koteswararao</p>
+        <p><strong>Father's Occupation:</strong>Self Employer</p>
+        <p><strong>Mother Name:</strong>Kalyani</p>
+        <p><strong>Mother's Occupation:</strong> House Wife+</p>
 
         <hr>
 
